# winetd

./: Cargo.toml  README.md  winetd.wxs
.github/workflows/: build-msi.yml  ci.yml
src/: error.rs  main.rs
src/service_listener/: mod.rs
